--- a/style.css
+++ b/style.css
@@ -13,11 +13,11 @@ nav ul li a{
     color: whitesmoke;
     font-weight: bold;
 }
-body{
-    background: beige;
+.bodyb{
+    background: #E7F6F2;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-header{
+.nav-background{
     background: black ;
     width: 100%;
     clear: both
@@ -32,19 +32,20 @@ header{
     padding: 8px;
 }
 
-.center {
+.banner {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    width: 80%;
+    height: 250px;
   }
   img {
     max-width: 100%;
     max-height: 100%;
    }
 .product{
-    height: 150px;
-    width: 150px;
+    height: 200px;
+    width: 200px;
     margin-bottom: 20px;
     margin-top: 20px;
 }
@@ -137,5 +138,7 @@ margin-top: 250px;
 .form{
     margin: 50px;
 }
-
+.title{
+    text-decoration: underline;
+}
 
