--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -92,24 +92,34 @@
     .title{
         text-decoration: underline;
     }
-    .card .card-body .card-image-top{
-        height: 10px;
-        width: auto;
-        margin-top: 50px;
-    }
-    .order-details{
-        width: 90%;
-    }
     .about-me-img1{
-        width: 80%;
-    }
-    .about-me-img2{
-        display: flex;
-        justify-content: center;
-        width: 80%;
-    }
+    width: 400px;
+    height: auto;
+    float: left;
+    margin:40px ;
+    border: black;
+    border-width: 20px;
     
-    .card:hover{
+}
+.about-me-text1{
+    margin-top: 50px;
+    
+}
+.about-me-text2{
+    margin-left: 50px;
+    margin-top: 130px;
+}
+.about-me-img2{
+    width: 500px;
+    height: auto;
+    float: right;
+    margin: 40px;
+}
+.form{
+    margin: 50px;
+}
+    
+ .card:hover{
         transform:scale(1.2);
         transition: all 1s;
     }
