--- a/scss/_mediaq.scss
+++ b/scss/_mediaq.scss
@@ -6,4 +6,35 @@
         display: flex;
         align-items: center;   
     }
+.card .card-body .card-image-top{
+    height: 10px;
+    width: auto;
+    margin-top: 50px;
+}
+.order-details{
+    width: 90%;
+}
+.about-me-img1{
+    width: 80%;
+}
+.about-me-img2{
+    display: flex;
+    justify-content: center;
+    width: 80%;
+}
+.map{
+    width: 90%;
+    height: 400px;
+   
+}
+.store{
+    display: none;   
+}
+.contact-info{
+    flex-direction: column;
+
+    justify-content: center;
+    display: flex;
+    align-items: center;   
+}
 }
