--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/*components*/
 .footer {
   display: flex;
   justify-content: space-between;
@@ -44,6 +45,10 @@ nav ul li a {
   height: 100px;
   float: left;
   padding: 8px;
+}
+
+body {
+  background-color: #E6D5B8;
 }
 
 .banner {
@@ -185,6 +190,10 @@ img {
 .card:hover {
   transform: scale(1.2);
   transition: all 1s;
+}
+
+.card {
+  color: #F0A500;
 }
 
 @media (max-width: 576px) {
