--- a/style.css
+++ b/style.css
@@ -196,6 +196,12 @@ img {
   color: #F0A500;
 }
 
+.enc {
+  display: flex;
+  justify-content: center;
+  color: #1B1A17;
+}
+
 @media (max-width: 576px) {
   .page-content {
     flex-direction: column;
