--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,6 @@
 /*components*/
 @import "./scss/footer";
+@import "./scss/mixin";
 @import "./scss/header";
 @import "./scss/main";
 @import "./scss/mediaq";
